[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/shader_wars/ModifiedCosts.gd" type="Script" id=1]
[ext_resource path="res://fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 14
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 2 )

[node name="ModifiedCostsPopup" type="PopupPanel"]
mouse_filter = 2
script = ExtResource( 1 )

[node name="VBC" type="VBoxContainer" parent="."]
margin_left = 4.0
margin_top = 4.0
margin_right = 173.0
margin_bottom = 90.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ModifiedCost" type="Label" parent="VBC"]
margin_right = 169.0
margin_bottom = 20.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Modified Time Cost: "

[node name="HBC" type="HBoxContainer" parent="VBC"]
margin_top = 24.0
margin_right = 169.0
margin_bottom = 86.0
mouse_filter = 2

[node name="MC" type="MarginContainer" parent="VBC/HBC"]
margin_right = 10.0
margin_bottom = 62.0
mouse_filter = 2
custom_constants/margin_left = 10

[node name="VBC" type="VBoxContainer" parent="VBC/HBC"]
margin_left = 14.0
margin_right = 130.0
margin_bottom = 62.0
mouse_filter = 2

[node name="PrintedCost" type="Label" parent="VBC/HBC/VBC"]
margin_right = 116.0
margin_bottom = 18.0
custom_fonts/font = SubResource( 2 )
text = "Printed Cost: "

[node name="SkillModifier" type="Label" parent="VBC/HBC/VBC"]
margin_top = 22.0
margin_right = 116.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Skill Modifier: "

[node name="SkillAlterants" type="MarginContainer" parent="VBC/HBC/VBC"]
margin_right = 40.0
margin_bottom = 40.0
mouse_filter = 2
custom_constants/margin_left = 10

[node name="VBC" type="VBoxContainer" parent="VBC/HBC/VBC/SkillAlterants"]
margin_left = 10.0
margin_right = 40.0
margin_bottom = 40.0
mouse_filter = 2

[node name="CardsModifier" type="Label" parent="VBC/HBC/VBC"]
margin_top = 44.0
margin_right = 116.0
margin_bottom = 62.0
custom_fonts/font = SubResource( 2 )
text = "Card Modifiers: "

[node name="TimeAlterants" type="MarginContainer" parent="VBC/HBC/VBC"]
margin_right = 40.0
margin_bottom = 40.0
mouse_filter = 2
custom_constants/margin_left = 10

[node name="VBC" type="VBoxContainer" parent="VBC/HBC/VBC/TimeAlterants"]
margin_left = 10.0
margin_right = 40.0
margin_bottom = 40.0
mouse_filter = 2
